Add support for ctrlChanListener on router to the model
