# controller/model/router_model.go
@@ -46,11 +46,12 @@ type Router struct {
 	ConnectTime time.Time
 	VersionInfo *versions.VersionInfo
 	routerLinks RouterLinks
-	Cost        uint16
-	NoTraversal bool
-	Disabled    bool
-	Metadata    *ctrl_pb.RouterMetadata
-	Interfaces  []*Interface
+	Cost              uint16
+	NoTraversal       bool
+	Disabled          bool
+	CtrlChanListeners []string
+	Metadata          *ctrl_pb.RouterMetadata
+	Interfaces        []*Interface
 }
 
 func (entity *Router) GetLinks() []*Link {
@@ -63,13 +64,14 @@ func (entity *Router) toBoltEntityForUpdate(tx *bbolt.Tx, env Env, _ boltz.Field
 
 func (entity *Router) toBoltEntityForCreate(*bbolt.Tx, Env) (*db.Router, error) {
 	return &db.Router{
-		BaseExtEntity: *boltz.NewExtEntity(entity.Id, entity.Tags),
-		Name:          entity.Name,
-		Fingerprint:   entity.Fingerprint,
-		Cost:          entity.Cost,
-		NoTraversal:   entity.NoTraversal,
-		Disabled:      entity.Disabled,
-		Interfaces:    InterfacesToBolt(entity.Interfaces),
+		BaseExtEntity:     *boltz.NewExtEntity(entity.Id, entity.Tags),
+		Name:              entity.Name,
+		Fingerprint:       entity.Fingerprint,
+		Cost:              entity.Cost,
+		NoTraversal:       entity.NoTraversal,
+		Disabled:          entity.Disabled,
+		CtrlChanListeners: entity.CtrlChanListeners,
+		Interfaces:        InterfacesToBolt(entity.Interfaces),
 	}, nil
 }
 
@@ -79,6 +81,7 @@ func (entity *Router) fillFrom(_ Env, _ *bbolt.Tx, boltRouter *db.Router) error 
 	entity.Cost = boltRouter.Cost
 	entity.NoTraversal = boltRouter.NoTraversal
 	entity.Disabled = boltRouter.Disabled
+	entity.CtrlChanListeners = boltRouter.CtrlChanListeners
 	entity.Interfaces = InterfacesFromBolt(boltRouter.Interfaces)
 	entity.FillCommon(boltRouter)
 	return nil
