# controller/model/transit_router_manager.go
@@ -39,8 +39,9 @@ func NewTransitRouterManager(env Env) *TransitRouterManager {
 	manager := &TransitRouterManager{
 		baseEntityManager: newBaseEntityManager[*TransitRouter, *db.TransitRouter](env, env.GetStores().TransitRouter),
 		allowedFields: boltz.MapFieldChecker{
-			db.FieldName:    struct{}{},
-			boltz.FieldTags: struct{}{},
+			db.FieldName:                       struct{}{},
+			boltz.FieldTags:                    struct{}{},
+			db.FieldRouterCtrlChanListeners:    struct{}{},
 		},
 	}
 	manager.impl = manager
@@ -307,6 +308,7 @@ func (self *TransitRouterManager) TransitRouterToProtobuf(entity *TransitRouter)
 		UnverifiedCertPem:     entity.UnverifiedCertPem,
 		Cost:                  uint32(entity.Cost),
 		NoTraversal:           entity.NoTraversal,
+		CtrlChanListeners:     entity.CtrlChanListeners,
 	}
 
 	return msg, nil
@@ -333,6 +335,7 @@ func (self *TransitRouterManager) ProtobufToTransitRouter(msg *edge_cmd_pb.Trans
 		UnverifiedCertPem:     msg.UnverifiedCertPem,
 		Cost:                  uint16(msg.Cost),
 		NoTraversal:           msg.NoTraversal,
+		CtrlChanListeners:     msg.CtrlChanListeners,
 	}, nil
 }
 
