# controller/rest_model/router_create.go
@@ -49,6 +49,9 @@ type RouterCreate struct {
 	// Minimum: 0
 	Cost *int64 `json:"cost"`
 
+	// ctrl chan listeners
+	CtrlChanListeners []string `json:"ctrlChanListeners"`
+
 	// disabled
 	Disabled *bool `json:"disabled,omitempty"`
 
