# controller/rest_model/router_detail.go
@@ -55,6 +55,9 @@ type RouterDetail struct {
 	// Minimum: 0
 	Cost *int64 `json:"cost"`
 
+	// ctrl chan listeners
+	CtrlChanListeners []string `json:"ctrlChanListeners"`
+
 	// disabled
 	// Required: true
 	Disabled *bool `json:"disabled"`
@@ -96,6 +99,8 @@ func (m *RouterDetail) UnmarshalJSON(raw []byte) error {
 
 		Cost *int64 `json:"cost"`
 
+		CtrlChanListeners []string `json:"ctrlChanListeners"`
+
 		Disabled *bool `json:"disabled"`
 
 		Fingerprint *string `json:"fingerprint"`
@@ -117,6 +122,8 @@ func (m *RouterDetail) UnmarshalJSON(raw []byte) error {
 	m.Connected = dataAO1.Connected
 
 	m.Cost = dataAO1.Cost
+
+	m.CtrlChanListeners = dataAO1.CtrlChanListeners
 
 	m.Disabled = dataAO1.Disabled
 
@@ -149,6 +156,8 @@ func (m RouterDetail) MarshalJSON() ([]byte, error) {
 
 		Cost *int64 `json:"cost"`
 
+		CtrlChanListeners []string `json:"ctrlChanListeners"`
+
 		Disabled *bool `json:"disabled"`
 
 		Fingerprint *string `json:"fingerprint"`
@@ -167,6 +176,8 @@ func (m RouterDetail) MarshalJSON() ([]byte, error) {
 	dataAO1.Connected = m.Connected
 
 	dataAO1.Cost = m.Cost
+
+	dataAO1.CtrlChanListeners = m.CtrlChanListeners
 
 	dataAO1.Disabled = m.Disabled
 
