# controller/rest_model/router_patch.go
@@ -48,6 +48,9 @@ type RouterPatch struct {
 	// Minimum: 0
 	Cost *int64 `json:"cost,omitempty"`
 
+	// ctrl chan listeners
+	CtrlChanListeners []string `json:"ctrlChanListeners"`
+
 	// disabled
 	Disabled *bool `json:"disabled,omitempty"`
 
